generate iframe with html instead of js

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
 		</h2>
 	</div><!-- letter-board -->
 
-	<div id="player" class="player"></div>
+	<iframe
+		id="player"
+		class="player"
+		width="560"
+		height="315"
+		src="https://www.youtube.com/embed/ii3n7hYQOl4?enablejsapi=1"
+		title="YouTube video player"
+		frameborder="0"
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+	></iframe>
 
 	<div class="snacks">
 		<span class="snacks-i i i_popcorn">
