restructured html and removed previous grid attempts

--- a/index.html
+++ b/index.html
@@ -20,23 +20,27 @@
 		<h1>RNG Cinema</h1>
 	</div>
 
-	<div class="letter-board">
-		<div class="letter-board-col">
-			<div class="letter-board-row">
-				<h2 class="letter-board-heading">now showing</h2>
-			</div>
-			<div class="letter-board-row" id="title">Spider-Man:</div>
-			<div class="letter-board-row" id="title-long">Into the Spider-Verse</div>
+	<div class="board">
+		<div class="board-tile tile_title-h">
+			<h2 class="board-text board-h2">now showing</h2>
+		</div>
+		<div class="board-tile tile_title-1">
+			<h3 class="board-text board-h3" id="title-1">Spider-Man:</h3>
+		</div>
+		<div class="board-tile tile_title-2">
+			<h3 class="board-text board-h3" id="title-2">Into the Spider-Verse</h3>
 		</div>
 
-		<div class="letter-board-col">
-			<div class="letter-board-row">
-				<h2 class="letter-board-heading">starring</h2>
-			</div>
-			<div class="letter-board-row" id="actor-1">Shameik Moore</div>
-			<div class="letter-board-row" id="actor-2">Jake Johnson</div>
+		<div class="board-tile tile_actor-h">
+			<h2 class="board-text board-h2">starring</h2>
 		</div>
-	</div><!-- letter-board -->
+		<div class="board-tile tile_actor-1">
+			<h3 class="board-text board-h3" id="actor-1">Shameik Moore</h3>
+		</div>
+		<div class="board-tile tile_actor-2">
+			<h3 class="board-text board-h3" id="actor-2">Jake Johnson</h3>
+		</div>
+	</div><!-- board -->
 
 	<div class="player" id="player"></div>
 
