media query to set reset display, removed grid-template-columns

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
 			<h2 class="board-text board-h2">now showing</h2>
 		</div>
 		<div class="board-tile tile_title-1">
-			<h3 class="board-text board-h3" id="title-1">Spider-Man:</h3>
+			<h3 class="board-text board-h3" id="title-1"></h3>
 		</div>
 		<div class="board-tile tile_title-2">
-			<h3 class="board-text board-h3" id="title-2">Into the Spider-Verse</h3>
+			<h3 class="board-text board-h3" id="title-2"></h3>
 		</div>
 
 		<div class="board-tile tile_actor-h">
 			<h2 class="board-text board-h2">starring</h2>
 		</div>
 		<div class="board-tile tile_actor-1">
-			<h3 class="board-text board-h3" id="actor-1">Shameik Moore</h3>
+			<h3 class="board-text board-h3" id="actor-1"></h3>
 		</div>
 		<div class="board-tile tile_actor-2">
-			<h3 class="board-text board-h3" id="actor-2">Jake Johnson</h3>
+			<h3 class="board-text board-h3" id="actor-2"></h3>
 		</div>
 	</div><!-- board -->
 
