--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
 			<h3 class="board-text board-h3" id="title-2"></h3>
 		</div>
 
-		<div class="board-tile tile_actor-h">
+		<div class="board-tile tile_actors-h">
 			<h2 class="board-text board-h2">starring</h2>
 		</div>
-		<div class="board-tile tile_actor-1">
-			<h3 class="board-text board-h3" id="actor-1"></h3>
+		<div class="board-tile tile_actors-1">
+			<h3 class="board-text board-h3" id="actors-1"></h3>
 		</div>
-		<div class="board-tile tile_actor-2">
-			<h3 class="board-text board-h3" id="actor-2"></h3>
+		<div class="board-tile tile_actors-2">
+			<h3 class="board-text board-h3" id="actors-2"></h3>
 		</div>
 	</div><!-- board -->
 
@@ -85,7 +85,7 @@
 
 </footer>
 
-<script src="js/player.js"></script>
+<script src="js/import.js"></script>
 
 </body>
 </html>
