generate js theme file

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,8 @@
 
 </footer>
 
-<script src="js/index.js"></script>
+<script src="js/theme.js"></script>
+<script src="js/script.js" type="module"></script>
 
 </body>
 </html>
