--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,6 @@
 
 </footer>
 
-<script src="js/theme.js"></script>
-<script src="js/script.js" type="module"></script>
-
+<script type="module" src="js/index.js"></script>
 </body>
 </html>
