switched favicon to favicon.ico file

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Oswald:wght@300&display=swap" rel="stylesheet">
 
-	<link rel="shortcut icon" type="image/png" href="assets/3d-glasses.svg">
+	<link rel="icon" type="image/png" href="favicon.ico">
 	<link rel="stylesheet" href="theme.css">
 	<link rel="stylesheet" href="index.css">
 </head>
